--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,8 @@
   .bi {
     color: aliceblue;
     font-size: 25px;
+    height: 25px;
+    width: 30px;
   }
   .carousel-control-prev {
     justify-content: center;
@@ -224,10 +226,12 @@
     display: grid;
     margin: 0px;
     padding: 0px;
-    gap: 30px;
+    gap: 10px;
+    justify-content: center;
   }
   .emolj-me {
-    width: 400px;
+    width: 150px;
+    height: 150px;
   }
   .emolj-mostra {
     padding-top: 50px;
@@ -277,10 +281,8 @@
     display: grid;
     margin: 0px;
     padding: 0px;
-    gap: 100px;
-  }
-  .emolj-me {
-    width: 250px;
+    gap: 50px;
+    justify-content: center;
   }
   .emolj-mostra {
     padding-top: 50px;
