--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,6 +69,7 @@
     width: 50vh;
     margin-left: 50px;
     justify-content: center;
+
 }
 
 .text-about{
@@ -173,7 +174,8 @@
         margin-left: 10px;
     }
     .carousel-item{
-        width: 180px;
+        display: grid;
+        width: 150px;
         justify-content: center;
     }
     .carousel{
@@ -181,6 +183,7 @@
         width: 150px;
         display: grid;
         justify-content: center;
+        margin-left: 0px;
     }
     .h1-contatos{
         text-align: center;
@@ -215,8 +218,8 @@
         justify-content: center;
     }
     .emolj-me{
-        width: 150px;
-        height: 150px;
+        width: 250px;
+        height: 250px;
     }
         
 
@@ -250,7 +253,7 @@
         text-align: center;
         width: 150px;
         padding: 0;
-        
+        margin-left: 0px;
     }
     .logoPc{
         width: 150px;
