--- a/sass/style.scss
+++ b/sass/style.scss
@@ -195,11 +195,13 @@
     .carousel-control-prev{
         justify-content: center;
         width: 25px;
+        display: none;
         
     }
     .carousel-control-next{
         justify-content: center;
         width: 25px;
+        display: none;
     }
     .capa{
         display:grid;
