--- a/css/style.css
+++ b/css/style.css
@@ -207,10 +207,12 @@
   .carousel-control-prev {
     justify-content: center;
     width: 25px;
+    display: none;
   }
   .carousel-control-next {
     justify-content: center;
     width: 25px;
+    display: none;
   }
   .capa {
     display: grid;
