--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,9 @@
     display: flex;
     
 }
-.nav-item{justify-content: center;}
+.nav-item{
+    justify-content: center;
+}
 .nav-link{
     color: red;
     font-size: 26px;
@@ -144,7 +146,7 @@
 
 @media (max-width : 770px) {
     .emolj-me{
-        width: 500px;
+        width: 370px;
 
     }
     .capa{
@@ -157,6 +159,31 @@
         margin-top: 20px;
         margin-left: 10px;
     }
+    .container-projects{
+        display: grid;
+        background-color: black;
+        color: white;
+        background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
+        height: 150vh;
+        justify-content: center;
+    
+    }
+    .carousel{
+        text-align: center;
+        width: 400px;
+        display: grid;
+        justify-content: center;
+        margin-left: 0px;
+        height: 40vh;
+        padding-top: 20px;
+
+        
+    }
+    .carousel-item{
+
+        width: 400px;
+        
+    }
 }
 
 @media (max-width : 450px){
@@ -164,15 +191,38 @@
         margin-top: 20px;
         margin-left: 10px;
     }
+    .container-projects{
+        display: grid;
+        background-color: black;
+        color: white;
+        background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
+        height: 150vh;
+        justify-content: center;
+    
+    }
+    .nav-link{
+        color: red;
+        font-size: 15px;
+        font-family: 'Share Tech Mono', monospace;
+    }
     .carousel-item{
-        width: 150px;
+
+        width: 400px;
+        
+    }
+    .img-me{
+        text-align: center;
     }
     .carousel{
         text-align: center;
-        width: 150px;
+        width: 400px;
         display: grid;
         justify-content: center;
         margin-left: 0px;
+        height: 40vh;
+        padding-top: 20px;
+
+        
     }
     .h1-contatos{
         text-align: center;
@@ -180,28 +230,28 @@
         padding-bottom: 40px;
     }
     .rede-social{
-        display: grid;
+        display: flex;
         justify-content: center;
         color: aliceblue;
         gap: 20px;
-       
+        padding-top: 50px;
+       flex-wrap: wrap;
     }
     .bi{
         color: aliceblue;
-        font-size: 25px;
-        height: 25px;
-        width: 30px;
+        height: 45px;
+        width: 50px;
     }
     .carousel-control-prev{
         justify-content: center;
         width: 25px;
-        display: none;
+        
         
     }
     .carousel-control-next{
         justify-content: center;
         width: 25px;
-        display: none;
+        
     }
     .capa{
         display:grid;
@@ -211,14 +261,14 @@
         justify-content: center;
     }
     .emolj-me{
-        width: 250px;
-        height: 250px;
+        width: 230px;
+        height: 230px;
     }
         
 
     .emolj-mostra{
         padding-top: 50px;
-        width: 250px;
+        width: 200px;
     }
     .sobre-mim{
         text-align: center;
@@ -238,20 +288,20 @@
         margin-top: 15px;
         margin-left: 8px;
     }
-    
     .nav-link{
         color: red;
         font-size: 10px;
         font-family: 'Share Tech Mono', monospace;
     }
     .carousel-item{
-        width: 110px;  
+        width: 300px;  
     }
     .carousel{
         text-align: center;
-        width: 110px;
+        width: 300px;
         padding: 0;
         margin-left: 0px;
+        height: 45vh;
     }
     .text-about{
         font-size: 15px;
@@ -295,8 +345,9 @@
         margin-right: 20px;
     }
     .emolj-me{
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
+        
     }
     .img-me{
         text-align: center;
@@ -323,20 +374,10 @@
         padding-top: 20px;
         padding-bottom: 10px;
     }
-    .rede-social{
-        display: grid;
-        justify-content: center;
-        color: aliceblue;
-        gap: 7px;
-       
-    }
-    .bi{
-        color: aliceblue;
-        font-size: 25px;
-        height: 25px;
-        width: 27px;
-    }
+   
 }
+
+
 @media (min-width : 1440px){
     .carrocel-todos{
         display: flex;
