--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,8 @@
     padding-bottom: 10px;
   }
   .logoPc {
-    width: 200px;
+    width: 20
+    0px;
     margin-top: 15px;
   }
   .footer {
