--- a/css/style.css
+++ b/css/style.css
@@ -1,383 +1,37 @@
-* {
-  margin: 0px;
-  padding: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+*{
+    box-sizing: border-box;
 }
 
-.container-main {
-  background-color: black;
-  color: white;
-  background-image: linear-gradient(to right, rgb(3, 5, 3), rgb(32, 2, 2));
-  height: 100vh;
+:root {
+    --cor0: #FA1B13;
+    --cor1: #C71610;
+    --cor2: #FB645F;
+    --cor3: #7A312F;
+    --cor4: #7A0E0A;
+
+    --fonte-padrao: arial, verdana, helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', "cursive"; 
+    --font-and: 'android', 'cursive';
 }
 
-.nav-bar {
-  display: flex;
+body{
+    background: #ffffff;
 }
 
-.nav-item {
-  justify-content: center;
-}
-
-.nav-link {
-  color: red;
-  font-size: 26px;
-  font-family: "Share Tech Mono", monospace;
-}
-
-.nav-link:hover {
-  opacity: 30%;
-  color: red;
-}
-
-.capa {
-  display: flex;
-  margin: 0px;
-  padding: 0px;
-  gap: 250px;
-  justify-content: center;
-}
-
-.text-descript {
-  margin-top: 200px;
-  margin-left: 90px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.nome {
-  color: rgb(214, 6, 6);
-  font-family: "Share Tech Mono", monospace;
-}
-
-.btn-me {
-  background-color: rgb(206, 12, 12);
-  border-radius: 10px;
-  width: 100px;
-  color: white;
-}
-
-.btn-me:hover {
-  opacity: 50%;
-}
-
-.emolj-me {
-  width: 500px;
-}
-
-.container-projects {
-  display: grid;
-  background-color: black;
-  color: white;
-  background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
-  height: 100vh;
-  justify-content: center;
-}
-
-.carousel {
-  display: grid;
-  height: 29vh;
-  width: 50vh;
-  margin-left: 50px;
-  justify-content: center;
-}
-
-.text-about {
-  font-size: 25px;
-  justify-content: center;
-  color: gray;
-}
-
-.title-projects {
-  text-align: center;
-  font-size: 40px;
-  padding-bottom: 30px;
-}
-
-.container-sobre-mim {
-  background-color: rgb(71, 25, 25);
-  color: white;
-  height: 45vh;
-}
-
-.emolj-mostra {
-  width: 300px;
-}
-
-.sobre-mim {
-  text-align: center;
-}
-
-.servico {
-  display: flex;
-  justify-content: center;
-}
-
-.web {
-  font-family: "Share Tech Mono", monospace;
-  color: gray;
-}
-
-.sec {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.container-contatos {
-  background-color: black;
-  color: white;
-  background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
-  height: 50vh;
-}
-
-.h1-contatos {
-  text-align: center;
-  padding-top: 50px;
-  padding-bottom: 70px;
-}
-
-.rede-social {
-  display: flex;
-  justify-content: center;
-  color: aliceblue;
-  gap: 60px;
-}
-
-.bi {
-  color: aliceblue;
-  font-size: 45px;
-}
-
-.bi:hover {
-  opacity: 30%;
-  color: red;
-}
-
-.footer {
-  text-align: center;
-  color: white;
-  background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
-  height: 5vh;
-}
-
-@media (max-width: 770px) {
-  .emolj-me {
-    width: 370px;
-  }
-  .capa {
-    display: grid;
-    margin: 0px;
-    padding: 0px;
-    gap: 0px;
-  }
-  .text-descript {
-    margin-top: 20px;
-    margin-left: 10px;
-  }
-  .container-projects {
-    display: grid;
-    background-color: black;
-    color: white;
-    background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
-    height: 150vh;
-    justify-content: center;
-  }
-  .carousel {
-    text-align: center;
-    width: 400px;
-    display: grid;
-    justify-content: center;
-    margin-left: 0px;
-    height: 40vh;
-    padding-top: 20px;
-  }
-  .carousel-item {
-    width: 400px;
-  }
-}
-@media (max-width: 450px) {
-  .logoPc {
-    width: 290px;
-    margin-top: 15px;
-  }
-  .text-descript {
-    margin-top: 20px;
-    margin-left: 10px;
-  }
-  .container-projects {
-    display: grid;
-    background-color: black;
-    color: white;
-    background-image: linear-gradient(to right, rgb(5, 3, 3), rgb(32, 2, 2));
-    height: 150vh;
-    justify-content: center;
-  }
-  .nav-link {
-    color: red;
-    font-size: 15px;
-    font-family: "Share Tech Mono", monospace;
-  }
-  .carousel-item {
-    width: 400px;
-  }
-  .img-me {
-    text-align: center;
-  }
-  .carousel {
-    text-align: center;
-    width: 400px;
-    display: grid;
-    justify-content: center;
-    margin-left: 0px;
-    height: 40vh;
-    padding-top: 20px;
-  }
-  .h1-contatos {
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 40px;
-  }
-  .rede-social {
-    display: flex;
-    justify-content: center;
-    color: aliceblue;
-    gap: 20px;
-    padding-top: 50px;
-    flex-wrap: wrap;
-  }
-  .bi {
-    color: aliceblue;
-    height: 45px;
-    width: 50px;
-  }
-  .carousel-control-prev {
-    justify-content: center;
-    width: 25px;
-  }
-  .carousel-control-next {
-    justify-content: center;
-    width: 25px;
-  }
-  .capa {
-    display: grid;
-    margin: 0px;
-    padding: 0px;
-    gap: 10px;
-    justify-content: center;
-  }
-  .emolj-me {
-    width: 230px;
-    height: 230px;
-  }
-  .emolj-mostra {
-    padding-top: 50px;
-    width: 200px;
-  }
-  .sobre-mim {
-    text-align: center;
-  }
-  .servico {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-  .ul-me {
-    padding: 0px;
-    margin-right: 20px;
-  }
-}
-@media (max-width: 380px) {
-  .text-descript {
-    margin-top: 15px;
-    margin-left: 8px;
-  }
-  .nav-link {
-    color: red;
-    font-size: 10px;
-    font-family: "Share Tech Mono", monospace;
-  }
-  .carousel-item {
-    width: 300px;
-  }
-  .carousel {
-    text-align: center;
-    width: 300px;
+button{
+    border: 0;
     padding: 0;
-    margin-left: 0px;
-    height: 45vh;
-  }
-  .text-about {
-    font-size: 15px;
-    justify-content: center;
-    color: gray;
-  }
-  .title-projects {
-    text-align: center;
-    font-size: 20px;
-    padding-bottom: 10px;
-  }
-  .logoPc {
-    width: 20
-    0px;
-    margin-top: 15px;
-  }
-  .footer {
-    font-size: 11px;
-  }
-  .header {
-    display: grid;
-  }
-  .nome {
-    font-size: 20px;
-  }
-  .capa {
-    display: grid;
-    margin: 0px;
-    padding: 0px;
-    gap: 15px;
-    justify-content: center;
-  }
-  .emolj-mostra {
-    padding-top: 50px;
-    width: 150px;
-  }
-  .sobre-mim {
-    text-align: center;
-  }
-  .ul-me {
-    padding: 0px;
-    margin-right: 20px;
-  }
-  .emolj-me {
-    width: 200px;
-    height: 200px;
-  }
-  .img-me {
-    text-align: center;
-  }
-  .servico {
-    display: flex;
-    justify-content: center;
-  }
-  .web {
-    font-family: "Share Tech Mono", monospace;
-    color: gray;
-  }
-  .sec {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-  }
-  .emolj-mostra {
-    width: 120px;
-  }
-  .h1-contatos {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 10px;
-  }
-}
-@media (min-width: 1440px) {
-  .carrocel-todos {
-    display: flex;
-    width: 1400px;
-  }
+    font-family: inherit;
+    background: transparent;
+    color: inherit;
+    cursor: pointer;
 }
 
-/*# sourceMappingURL=style.css.map */
+.navbar{
+    background-color: rgb(34, 32, 32);
+}
+.navbar-toggler-icon{
+    color: var(--cor0);
+}
