--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body{
 .navbar-brand {
     color: var(--cor0);
     font-family: "Share Tech Mono", monospace;
-    font-size: 1.5rem;
+    font-size: 1,2rem;
 }
 .navbar-brand:hover{
     color: white;
@@ -149,13 +149,15 @@ body{
 .habilidades{
     height: 100%;
     padding-top: 5rem;
+   
 }
 .habilidades h1{
     color: #FA1B13;
     padding-top: 4rem;
+    padding-bottom: 1rem;
 }
 .col{
-    padding-top: 3rem;
+    padding-top: 6rem;
 }
 .col img {
     width: 6rem;
@@ -217,17 +219,18 @@ body{
 /**projetos**/
 
 .projetos{
-    height: 100%;
     padding-top: 7rem;
+    height: 100%;
     justify-content: center;
+    text-align: center;
 }
 .projetos h1{
     color: #FA1B13;
-    padding-bottom: 1rem;
+    padding-top: 4rem;
 }
 
 .card-1{
-    width: 100%;
+    width: 7rem;
     padding-top: 4rem;
     
 }
@@ -247,14 +250,6 @@ body{
     background-color: #494848;
 
 }
-
-
-
-
-
-
-
-
 
 
 
