--- a/link3/jogo-da-velha/style.css
+++ b/link3/jogo-da-velha/style.css
@@ -99,3 +99,15 @@ main{
         margin: 0px;
     }
 }
+
+@media (max-width: 1440px){
+    main{
+        margin: 10px;
+        background-color: rgb(216, 176, 43);
+        height: 100%;
+        width: 600px;
+        border-radius: 15px;
+        margin-left: auto;
+        margin-right: auto; 
+    }
+}
