--- a/link3/jogo-da-velha/style.css
+++ b/link3/jogo-da-velha/style.css
@@ -105,7 +105,7 @@ main{
         margin: 10px;
         background-color: rgb(216, 176, 43);
         height: 100%;
-        width: 600px;
+        width: auto;
         border-radius: 15px;
         margin-left: auto;
         margin-right: auto; 
