--- a/link3/jogo-da-velha/style.css
+++ b/link3/jogo-da-velha/style.css
@@ -93,7 +93,7 @@ main{
 @media (max-width: 600px){
     main{
         margin: 10px;
-        height: 100%;
+        height: 90vh;
         width: auto;
         border-radius: 15px;
         margin: 0px;
@@ -105,7 +105,7 @@ main{
         margin: 10px;
         background-color: rgb(216, 176, 43);
         height: 100%;
-        width: 650px;
+        width: auto;
         border-radius: 15px;
         margin-left: auto;
         margin-right: auto; 
